--- a/Quiz/Quiz.csproj
+++ b/Quiz/Quiz.csproj
@@ -67,9 +67,9 @@
     <Compile Include="Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Answers.cs" />
+    <Compile Include="Answer.cs" />
     <Compile Include="Auth.cs" />
-    <Compile Include="Categories.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="DBConfig.cs" />
     <Compile Include="Extensions\Crypt.cs" />
     <Compile Include="Form1.cs">
@@ -85,7 +85,7 @@
     <Compile Include="MySQLDatabase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Questions.cs" />
+    <Compile Include="Question.cs" />
     <Compile Include="User.cs" />
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
